[#550] Launcher take jvm config from the file.